still trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input[type='number']::-webkit-outer-spin-button {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  
   background-color: rgba(0, 0, 0, 0.4);
 }
 #tip-form {
